--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.8.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-devtools": "^3.5.0",
